--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
     <br>
     <p>
         <ul>
-        Adobe After Effects
-        Adobe Illustrator
-        Adobe InDesign
-        Adobe Photoshop
-        Cinema 4D
-        Sketch
-        Ableton Live
-        Craft
-        CMS
-        Ungapped
-        FB Business Manager
+        <li>After Effects</li>
+        <li>>Adobe Illustrator</li>
+        <li>Adobe InDesign</li>
+        <li>Adobe Photoshop</li>
+        <li>Cinema 4D</li>
+        <li>Sketch</li>
+        <li>Ableton Live</li>
+        <li>Craft</li>
+        <li>CMS</li>
+        <li>Ungapped</li>
+        <li>FB Business Manager</li>
     </ul>
     </p>
     
