--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Profile</h1>
     <br>
-    <p>Open and outgoing graphic motion designer working full-time in Oslo, Norway. I have a great interest in graphic motion design and my studies have given me valuable experience with web design, sketching, art direction, animation, working with briefs and concept development. Most of the work has been completed using the Adobe products, Sketch, and Cinema 4D. I am an inclusive team member, both profesionally and socially. My previous work in the service sector has also made me efficient and service-minded.
+    <p>Open and outgoing graphic motion designer from Oslo, Norway, currently studying a dual master in Milan, Italy. I have a great interest in graphic motion design and my studies have given me valuable experience with web design, sketching, art direction, animation, working with briefs and concept development. Most of the work has been completed using the Adobe products, Sketch, and Cinema 4D. I am an inclusive team member, both profesionally and socially. My previous work in the service sector has also made me efficient and service-minded.
     </p>
     <br>
      <h1>Work Experience</h1>
