--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p> Dec 2016-Oct 2018 <br>
         Served as Chairman of the Board for ANSA Barcelona. I, together with the board, arranged multiple events throughout the year for Norwegian students in Barcelona. My responsibility as the chairman was to ensure that we reached our annual goals and that tasks were completed. I coordinated events, meetings and communicated with the national board.    </p>
      <br>
-    <h2>Shiftt Manager, BIT Union</h2>
+    <h2>Shift Manager, BIT Union</h2>
     <p> 2015-2016 <br>
         I started as an associate at BIT Solli, and was promoted to shift manager after a few months. I was also selected to take part in the opening of a new f lagship store in Oslo. During my studies in Barcelona I have taken multiple shifts at BIT during my visits back home.
     </p>
