--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <br>
         <ul>
         <li>After Effects</li>
-        <li>>Adobe Illustrator</li>
+        <li>Adobe Illustrator</li>
         <li>Adobe InDesign</li>
         <li>Adobe Photoshop</li>
         <li>Cinema 4D</li>
