--- a/index.html
+++ b/index.html
@@ -8,43 +8,42 @@
 </head>
 <body>
     <h1>Helene Grimstad</h1>
-    <br>
-    <h2>Profile</h2>
+    <h3>Contact Me</h3>
+    <p>
+    <a href="mailto:grimstad.helene@gmail.com">Email</a>
+    +47 97 483 23
+    <a href='blank'"https://www.helenegrimstad.com/>My Website</a>
+    </p>
+
+    <h3>Profile</h3>
     <p>Open and outgoing graphic motion designer from Oslo, Norway, currently studying a dual master in Milan, Italy. I am attending a Master in Visual Design, and a Master in Web and Digital Design. I have a great interest in graphic motion design and my studies have given me valuable experience with web design, sketching, art direction, animation, working with briefs and concept development. Most of the work has been completed using the Adobe products, Sketch, and Cinema 4D. I am an inclusive team member, both profesionally and socially. My previous work in the service sector has also made me efficient and service-minded.
     </p>
-    <br>
-     <h2>Work Experience</h2>
-    <br>
+     <h3>Work Experience</h3>
     <h4>Graphic Designer, Røisland & Co</h4>
     <p> Aug 2020-Sep 2022 <br>
         I worked as a graphic designer and marketing coordinator at Røisland & Co. It has been a rewarding experience with a lot of responsibility. I was responsible for the social media platforms, websites and marketing campaigns for the real-estate portfolio.
     </p>
-    <br>
     <h4>Intern at NXT Oslo, Acvertising agency</h4>
     <p> Aug 2019-Sep 2019 <br>
         My internship at NXT Oslo was very educational. The daily tasks varied between clients. To name a few of my tasks: animated commercials for social media platforms, created a new identity for NXT Oslo, designed Google ads, and concept development.
     </p>
-    <br>
     <h4>Vice Chairman of the Board, ANSA Spain and Portugal</h4>
     <p> Mar 2019-Mar 2020 <br>
         My responsibility was to assist the Chairman, set annual goals and update statutes, and plan and arrange events for Norwegian students in Spain and Portugal.
     </p>
-    <br>
     <h4>Head of Web, ANSA Spain and Portugal</h4>
     <p> Oct 2018-Mar 2019 <br>
         Responsibilities included updating ANSA’s web page and social media accounts, set annual goals and update statutes, and plan and arrange events for Norwegian students in Spain and Portugal.
      </p>
-    <br>
     <h4>Chairman of the Board, ANSA Barcelona</h4>
     <p> Dec 2016-Oct 2018 <br>
         Served as Chairman of the Board for ANSA Barcelona. I, together with the board, arranged multiple events throughout the year for Norwegian students in Barcelona. My responsibility as the chairman was to ensure that we reached our annual goals and that tasks were completed. I coordinated events, meetings and communicated with the national board.    </p>
-     <br>
     <h4>Shift Manager, BIT Union</h4>
     <p> 2015-2016 <br>
         I started as an associate at BIT Solli, and was promoted to shift manager after a few months. I was also selected to take part in the opening of a new f lagship store in Oslo. During my studies in Barcelona I have taken multiple shifts at BIT during my visits back home.
     </p>
-    <h2>Skills</h2>
-    <br>
+
+    <h3>Skills</h3>
         <ul>
         <li>After Effects</li>
         <li>Adobe Illustrator</li>
@@ -53,8 +52,7 @@
         <li>Cinema 4D</li>
         <li>Sketch</li>
         <li>Ableton Live</li>
-        <li>Craft</li>
-        <li>CMS</li>
+        <li>Craft CMS</li>
         <li>Ungapped</li>
         <li>FB Business Manager</li>
     </ul>
