--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="mailto:grimstad.helene@gmail.com">Email</a>
     +47 97 483 23
     <a href='blank'"https://www.helenegrimstad.com/>My Website</a>
+    <a href="blank"https://www.helenegrimstad.com/">My Website</a>
     </p>
 
     <h3>Profile</h3>
