--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 <body>
     <h1>Helene Grimstad</h1>
     <h3>Contact Me</h3>
-    <p>
-    <a href="mailto:grimstad.helene@gmail.com">Email</a>
-    +47 97 483 23
-    <a href='blank'"https://www.helenegrimstad.com/>My Website</a>
-    <a href="blank"https://www.helenegrimstad.com/">My Website</a>
-    </p>
+    <ul>
+        <li><a href="mailto:grimstad.helene@gmail.com">Email</a></li>
+        <li>+47 97 483 23</li>
+        <li> <a href="blank"https://www.helenegrimstad.com/">My Website</a></li>
+    </ul>
 
     <h3>Profile</h3>
     <p>Open and outgoing graphic motion designer from Oslo, Norway, currently studying a dual master in Milan, Italy. I am attending a Master in Visual Design, and a Master in Web and Digital Design. I have a great interest in graphic motion design and my studies have given me valuable experience with web design, sketching, art direction, animation, working with briefs and concept development. Most of the work has been completed using the Adobe products, Sketch, and Cinema 4D. I am an inclusive team member, both profesionally and socially. My previous work in the service sector has also made me efficient and service-minded.
