--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
         <li><a href="mailto:grimstad.helene@gmail.com">Email</a></li>
         <li>+47 97 483 23</li>
-        <li> <a href="blank"https://www.helenegrimstad.com/">My Website</a></li>
+        <li> <a href="https://www.helenegrimstad.com/" target="_blank">My Website</a></li>
     </ul>
 
     <h3>Profile</h3>
