--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
     <p> 2015-2016 <br>
         I started as an associate at BIT Solli, and was promoted to shift manager after a few months. I was also selected to take part in the opening of a new f lagship store in Oslo. During my studies in Barcelona I have taken multiple shifts at BIT during my visits back home.
     </p>
-
+    <h3>Education</h3>
+        <ul>
+            <li>2016-2020 IED Barcelona</li>
+            <li>2014-2015 Ullern High School</li>
+            <li>2013-2014 Exchange student at Keller High School, Texas, USA</li>
+            <li>2012-2013 Ullern High School</li>
+            
     <h3>Skills</h3>
         <ul>
         <li>After Effects</li>
