--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
     </p>
     <h3>Education</h3>
         <ul>
-            <li>2016-2020 IED Barcelona</li>
-            <li>2014-2015 Ullern High School</li>
-            <li>2013-2014 Exchange student at Keller High School, Texas, USA</li>
-            <li>2012-2013 Ullern High School</li>
-            
+            <li>2022-Present | SPD Milano</li>
+            <li>2016-2020 | IED Barcelona</li>
+            <li>2014-2015 | Ullern High School</li>
+            <li>2013-2014 | Exchange student at Keller High School, Texas, USA</li>
+            <li>2012-2013 | Ullern High School</li>
+
     <h3>Skills</h3>
         <ul>
         <li>After Effects</li>
