--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Helene Grimstad</h1>
-    
+
     <ul>
         <li><a href="mailto:grimstad.helene@gmail.com">Email</a></li>
         <li>+47 97 483 23</li>
@@ -52,16 +52,19 @@
     </p>
     <h3>Skills</h3>
         <ul>
-        <li>After Effects</li>
         <li>Adobe Illustrator</li>
         <li>Adobe InDesign</li>
+        <li>Adobe After Effects</li>
         <li>Adobe Photoshop</li>
         <li>Cinema 4D</li>
+        <li>Html</li>
+        <li>CSS</li>
+        <li>FB Business Manager</li>
         <li>Sketch</li>
         <li>Ableton Live</li>
         <li>Craft CMS</li>
         <li>Ungapped</li>
-        <li>FB Business Manager</li>
+        <li>Figma</li>
     </ul>
     
 </body>
